<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlPanel">

    <TextView
        android:id="@+id/tbxTitle"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="@android:color/background_dark"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/tbxFreq"
        android:layout_width="174dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/freq_desc"
        android:fontFamily="monospace"
        android:text="@string/frequencies_heading"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbxTitle" />

    <Button
        android:id="@+id/btnAddFreq"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="btnAddFreq_onClick"
        android:text="@string/freq_add_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbxFreq" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="153dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/freq_name_hint"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtFrequency"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtToneName"
        android:layout_width="166dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <EditText
        android:id="@+id/edtFrequency"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="212dp"
        android:ems="10"
        android:hint="@numeric/base_freq"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtFrequency"
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/freq_value_textbox"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtFrequency"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/lloPresets"
        android:layout_width="217dp"
        android:layout_height="405dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtFrequency"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbxFreq"
        app:layout_constraintVertical_bias="1.0"/>


</android.support.constraint.ConstraintLayout>